src/test/deca/context/valid/variables/affect_compatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2022

{
   int a;
   int b;
   a = 2 ;
   b = 1 ;
   //print(a,b) ;
   a = b;
   //print(a, b) ;
}
